plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.11'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = "com.example"
version = "0.0.1-SNAPSHOT"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	// Репозиторий из ТЗ с аутентификацией по токену
	maven {
		url "https://gitlab.skillbox.ru/api/v4/projects/263574/packages/maven"
		credentials(HttpHeaderCredentials) {
			name = "Private-Token"
			value = "glpat-Viu1C6oUSddYB3JdKviW"
		}
		authentication {
			header(HttpHeaderAuthentication)
		}
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	implementation("org.springframework.boot:spring-boot-starter-validation")
	implementation("org.springframework.boot:spring-boot-starter-web")
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation 'org.jsoup:jsoup:1.17.2'

	// Зависимости для лемматизатора из ТЗ
	implementation 'org.apache.lucene.morphology:morph:1.5'
	implementation 'org.apache.lucene.analysis:morphology:1.5'
	implementation 'org.apache.lucene.morphology:dictionary-reader:1.5'
	implementation 'org.apache.lucene.morphology:english:1.5'
	implementation 'org.apache.lucene.morphology:russian:1.5'


	compileOnly("org.projectlombok:lombok")
	runtimeOnly("org.postgresql:postgresql")
	annotationProcessor("org.projectlombok:lombok")
	implementation("org.mapstruct:mapstruct:1.5.3.Final")
	annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")

	testImplementation 'net.javacrumbs.json-unit:json-unit-spring:2.38.0'
	testImplementation("org.springframework.boot:spring-boot-starter-test")
	testImplementation 'org.springframework.security:spring-security-test'
}


tasks.withType(Test) {
	useJUnitPlatform()
}
